cc : Don't draw animating layers which are transparent but raster them.

This is similar to https://codereview.chromium.org/2838033002/ where
we do that same thing for animating layers with singular transform

BUG=717818
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2858853002
Cr-Commit-Position: refs/heads/master@{#469253}

Former-commit-id: 2d7e67c3c84d2f11e12d34bdb71fa1b2153e38a5